examples/test/testpolicy15322.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15322
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key15: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value18
      podSelector:
        matchLabels:
          key45: value6
          key39: value12
          key30: value29
